# Handy

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/edge/integrated/: EdgeIntegratedApp.kt  MainActivity.kt
app/src/main/java/com/edge/integrated/bridge/: ModelBridge.kt  OpencodeBridge.kt  TermuxBridge.kt  WinlatorBridge.kt
app/src/main/java/com/edge/integrated/di/: AppModule.kt
app/src/main/java/com/edge/integrated/model/: ChatMessage.kt  ContainerInfo.kt  ModelInfo.kt
app/src/main/java/com/edge/integrated/service/: ModelDownloadService.kt  OpencodeService.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
opencode-runtime/config/: opencode.default.json
opencode-runtime/scripts/: install-opencode.sh  start-server.sh
termux-module/src/main/: AndroidManifest.xml
termux-module/terminal-emulator/: build.gradle.kts
termux-module/terminal-emulator/src/main/: AndroidManifest.xml
termux-module/terminal-view/: build.gradle.kts
termux-module/terminal-view/src/main/: AndroidManifest.xml
termux-module/termux-shared/: build.gradle.kts
termux-module/termux-shared/src/main/: AndroidManifest.xml
winlator-core/: build.gradle.kts
winlator-core/src/main/cpp/: CMakeLists.txt
winlator-core/src/main/java/com/winlator/: WinlatorEngine.kt
(+14 files in other folders)
